# tic_tac_toe

./: CMakeLists.txt  README.md  main.c
includes/: game.h  game_rules.h  input.h  menu.h
libraries/game/: game.c
libraries/game_rules/: game_rules.c
libraries/input/: input.c
libraries/menu/: menu.c
